TEST_PROGRAMS/INVALID/Inderjot_Ratol/Invalid5.min
#checking multiple declaration and checking unary operator
var x: string ; var y: float ; var c:int;

x="bfh^%"; 
y=045.;
c=10;
c=-c+10;
print c;


